# modalproject

./: .gitignore  Makefile  README.md
.github/workflows/: ci_cd.yaml  pr_closed.yaml
backend/: api.py  graphql_router.py  pyproject.toml
backend/graphql/: query.py  schema.py
backend/src/: __init__.py  api.py  common.py  graphql_router.py
backend/src/api/: app.py  graphql_router.py
backend/src/api/graphql/: query.py  schema.py
backend/src/graphql/: query.py
backend/src/modal_functions/: functions.py
frontend/: graphql-codegen.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/graphql/: apolloClient.ts
frontend/src/graphql/__generated__/: schema.graphql  types.ts
frontend/src/graphql/queries/: Books.queries.ts  Sample.queries.ts
